--- a/modules/monitoring/public/api_calls/mixpanel_create_event.liquid
+++ b/modules/monitoring/public/api_calls/mixpanel_create_event.liquid
@@ -8,7 +8,7 @@ callback: >
   {% if response_data.error %}
     {%- log response_data.error, type: 'modules/monitoring/mixpanel_create_event' -%}
   {% endif %}
-headers: >
+request_headers: >
   {% if data %}
     {
       "Content-Type": "application/x-www-form-urlencoded"
