--- a/app/views/partials/theme/simple/dashboard/items/item-status-object.js.liquid
+++ b/app/views/partials/theme/simple/dashboard/items/item-status-object.js.liquid
@@ -1,7 +1,7 @@
 <script>
   (() => {
     const createStatus = (name, object_id, scope) => {
-      fetch('/statuses', {
+      fetch('/api/statuses.json', {
         method: 'POST', // or 'PUT'
         headers: {
           'Content-Type': 'application/json'
