--- a/app/views/partials/theme/simple/items/show.liquid
+++ b/app/views/partials/theme/simple/items/show.liquid
@@ -32,7 +32,7 @@
       {% endif %}
     </div>
 
-    <div class="w-full mt-5 lg:mt-0 lg:w-1/2 lg:pl-10">
+    <div class="w-full mt-6 lg:w-1/2 lg:pl-10 lg:py-6 lg:mt-0">
       <h2 class="text-sm tracking-widest ">
         {% render 'theme/simple/business_card', user: item.owner, current_profile: current_profile %}
         <a href="/u/{{ item.owner.id }}">{% print 'app.items.by_user' | t %}</a>
