--- a/app/views/partials/theme/simple/profile/sections/following.liquid
+++ b/app/views/partials/theme/simple/profile/sections/following.liquid
@@ -1,4 +1,4 @@
-<section class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10 md:gap-5">
+<section class="grid-basic">
   {% for relation in list.results %}
     {% render 'theme/simple/profile/user_card', user: relation.r, current_profile: current_profile %}
   {% else %}
