--- a/app/views/partials/lib/consumers/order_status_created/update_metrics_cache.liquid
+++ b/app/views/partials/lib/consumers/order_status_created/update_metrics_cache.liquid
@@ -1,7 +1,7 @@
 {% liquid
   function order = 'lib/data/queries/orders/find', id: event.target.id
 
-  if order.status.name == 'app.order_statuses.paid'
+  if order.status.name == 'app.statuses.orders.paid'
     function report = 'lib/commands/metrics/create'
   endif
 %}
