--- a/app/views/partials/lib/consumers/stripe_payment_completed/complete_order.liquid
+++ b/app/views/partials/lib/consumers/stripe_payment_completed/complete_order.liquid
@@ -1,8 +1,6 @@
 {% liquid
-  assign order_id = event.object.id
-  assign user_id = event.actor.id
-  assign status = 'app.order_statuses.paid'
-  log event, type: 'event'
+  assign object_id = event.object.id
+  assign profile_id = event.actor.id
 
-  include 'lib/commands/order_statuses/create', order_id: order_id, current_user_id: user.id, name: status
+  function status = 'lib/commands/statuses/create', profile_id: profile_id, object_id: object_id, name: 'paid', scope: 'app.statuses.orders'
 %}
