--- a/app/views/partials/lib/data/queries/items/search/build.liquid
+++ b/app/views/partials/lib/data/queries/items/search/build.liquid
@@ -11,14 +11,22 @@
 
 {% parse_json query %}
 {
-  "limit": {{ limit | default: 20 }},
-  "keyword": {{ params.keyword | json }},
-  "sort_by": {{ params.sort_by | json }},
-  "sort": {{ sort_options[params.sort_by] | json }},
-  "owner": {{ owner | json }},
-  "category": {{ params.category | json }},
-  "withOrders": {{ withOrders | default: false }}
+  "limit":        {{ limit | default: 20 }},
+  "keyword":      {{ params.keyword | json }},
+  "sort_by":      {{ params.sort_by | json }},
+  "sort":         {{ sort_options[params.sort_by] | json }},
+  "owner":        {{ owner | json }},
+  "category":     {{ params.category | json }},
+  "withOrders":   {{ withOrders | default: false }},
+  "withStatuses": {{ withStatuses | default: false }}
 }
 {% endparse_json %}
+
+{% liquid
+  assign status = params.status | default: status
+  if status
+    hash_assign query['status'] = 'app.statuses.items.' | append: status
+  endif
+%}
 
 {% return query %}
