Complete no reload interaction

--- a/app/views/partials/theme/simple/layout/scripts.liquid
+++ b/app/views/partials/theme/simple/layout/scripts.liquid
@@ -4,5 +4,7 @@
 
 
 <script src="{{ 'modules/chat/js/notifications.js' | asset_url }}"></script>
+<script src="{{ 'modules/chat/js/chat.js' | asset_url }}"></script>
+
 {% comment %}TODO: rewrite navigation dropdown in vanila js{% endcomment %}
 <script src="{{ 'vendor/js/alpine.min.js' | asset_url }}"></script>
