--- a/app/views/partials/theme/simple/profile/show.liquid
+++ b/app/views/partials/theme/simple/profile/show.liquid
@@ -31,7 +31,7 @@
 
 
   {% if current_profile.id != user.id %}
-    <div class="w-full md:w-1/3 p-4 mb-4 md:mb-0 mb-5 bg-white">
+    <div class="w-full md:w-1/3 p-4 mb-4 md:mb-0 mb-5 bg-white overflow-auto h-screen" id="profile-messages">
 
       {% liquid
         graphql conversation = 'modules/chat/find_conversation', from_id: current_profile.id, to_id: user.id
