Fixed header layout responsiveness

--- a/app/views/partials/theme/simple/layout/header.liquid
+++ b/app/views/partials/theme/simple/layout/header.liquid
@@ -11,7 +11,7 @@
 
     {% include 'theme/simple/home/quick_search_form' %}
 
-    <nav class="flex flex-wrap items-center justify-center text-base">
+    <nav class="flex flex-wrap items-center text-base mx-auto mt-4 lg:mx-0 lg:mt-0">
       <a href="/dashboard/items/new" class="p-3 hover:text-gray-900">{{ 'app.header.add' | t }}</a>
       <a href="/search" class="p-3 hover:text-gray-900">{{ 'app.items.list' | t }}</a>
       <a href="/groups" class="p-3 hover:text-gray-900">{{ 'app.groups.list' | t }}</a>
