--- a/app/views/partials/theme/simple/layout/header.liquid
+++ b/app/views/partials/theme/simple/layout/header.liquid
@@ -1,3 +1,10 @@
+{% liquid
+	if context.current_user.id
+		function current_profile = 'lib/current_profile', user_id: context.current_user.id	
+	endif
+%}
+
+
 <header class="py-4">
   <div class="container flex flex-col flex-wrap items-center mx-auto md:flex-row">
     <a class="flex items-center font-medium text-gray-900" href="/">
@@ -26,10 +33,10 @@
 
       <div x-data="{ dropdownOpen: false }" class="relative">
         <button @click="dropdownOpen = !dropdownOpen"
-          class="relative z-10 block px-3 py-2 bg-white rounded-md focus:outline-none" data-menu-dropdown>
+          class="flex items-center relative z-10 px-3 py-2 bg-white rounded-md focus:outline-none" data-menu-dropdown>
           <span class="hover:text-gray-900">{{ profile.first_name | default: profile.name }}</span>
 
-          <svg class="inline-block w-5 h-5 text-gray-800" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 1000"><path d="M10 212c0 36.8 29.8 66.6 66.6 66.6s66.6-29.8 66.6-66.6-29.8-66.6-66.6-66.6C39.8 145.3 10 175.2 10 212zm341.5 58.3h578.8c31.9 0 59.7-26.4 59.7-59.7 0-33.3-27.8-58.3-59.7-58.3H351.5c-31.9 0-59.7 26.4-59.7 59.7 0 33.3 26.4 58.3 59.7 58.3zM10 499.3c0 36.8 29.8 66.6 66.6 66.6s66.6-29.8 66.6-66.6-29.8-66.6-66.6-66.6S10 462.5 10 499.3zM930.3 441H351.5c-31.9 0-59.7 26.4-59.7 59.7 0 33.3 26.4 59.7 59.7 59.7h578.8c31.9 0 59.7-26.4 59.7-59.7 0-33.3-27.8-59.7-59.7-59.7zM10 788c0 36.8 29.8 66.6 66.6 66.6s66.6-29.8 66.6-66.6-29.8-66.6-66.6-66.6S10 751.2 10 788zm920.3-59.7H351.5c-31.9 0-59.7 26.4-59.7 59.7s26.4 59.7 59.7 59.7h578.8c31.9 0 59.7-26.4 59.7-59.7s-27.8-59.7-59.7-59.7z"/></svg>
+		  <img src="{{ current_profile.avatar.photo.versions.tiny }}" class="w-5 h-5 rounded-full ml-2">
         </button>
 
         <div x-show="dropdownOpen" @click="dropdownOpen = false" class="fixed inset-0 z-10 w-full h-full"></div>
@@ -46,10 +53,10 @@
             </button>
           </form>
         </div>
-      </div>
+	  </div>
       {% else %}
       <a href="/sessions/new" class="ml-3 button button-sm">
-        {{ 'app.login' | t }}
+		{{ 'app.login' | t }}
       </a>
       {% endif %}
     </nav>
