Preventing the user popup to flash before page loads

--- a/src/css/base/body.css
+++ b/src/css/base/body.css
@@ -12,3 +12,7 @@ main a[href]:hover {
 }
 /* purgecss end ignore */
 
+/* used by alpine.js to mark items before JS initializes */
+[x-cloak] {
+	display: none;
+}
