--- a/app/views/partials/theme/simple/categories/form.liquid
+++ b/app/views/partials/theme/simple/categories/form.liquid
@@ -6,7 +6,7 @@
   endif
 %}
 <div class="container flex flex-wrap mx-auto groups-center">
-  <form action="/categories" method="post" class="w-full md:w-2/3">
+  <form action="categories" method="post" class="w-full md:w-2/3">
     {% include 'authenticity_token' %}
     <input type="hidden" name="_method" value="{{method}}" />
 
