--- a/app/views/partials/theme/simple/profile/show.liquid
+++ b/app/views/partials/theme/simple/profile/show.liquid
@@ -29,16 +29,11 @@
     %}
   </div>
 
+  {% liquid
 
-  {% if current_profile.id != user.id %}
-    <div class="w-full md:w-1/3 p-4 mb-4 md:mb-0 mb-5 bg-white overflow-auto h-screen" id="profile-messages">
-
-      {% liquid
-        graphql conversation = 'modules/chat/find_conversation', from_id: current_profile.id, to_id: user.id
-        graphql messages = 'modules/chat/find_messages', conversation_id: conversation.models.results.first.id
-        render "modules/chat/chat", current_profile: current_profile, user: user, messages: messages, conversation: conversation 
-      %}
-    </div>
-  {% endif %}
+    if current_profile.id != user.id
+      render "modules/chat/chat", current_profile: current_profile, user: user, messages: messages, conversation: conversation
+    endif
+  %}
 </div>
 
