--- a/app/views/partials/theme/simple/layout/header.liquid
+++ b/app/views/partials/theme/simple/layout/header.liquid
@@ -29,8 +29,8 @@
 
         <div x-data="{ dropdownOpen: false }" class="relative">
           <button @click="dropdownOpen = !dropdownOpen" class="relative z-10 block rounded-md bg-white ml-3 p-2 focus:outline-none" data-menu-dropdown>
-            <span class="mr-2 hover:text-gray-900">{{profile.first_name | default: profile.name }}</span>
-            <svg class="h-5 w-5 text-gray-800 inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"> <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd" /> </svg>
+            <span class="hover:text-gray-900">{{ profile.first_name | default: profile.name }}</span>
+            <svg class="inline-block w-5 h-5 text-gray-800" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 1000"><path d="M10 212c0 36.8 29.8 66.6 66.6 66.6s66.6-29.8 66.6-66.6-29.8-66.6-66.6-66.6C39.8 145.3 10 175.2 10 212zm341.5 58.3h578.8c31.9 0 59.7-26.4 59.7-59.7 0-33.3-27.8-58.3-59.7-58.3H351.5c-31.9 0-59.7 26.4-59.7 59.7 0 33.3 26.4 58.3 59.7 58.3zM10 499.3c0 36.8 29.8 66.6 66.6 66.6s66.6-29.8 66.6-66.6-29.8-66.6-66.6-66.6S10 462.5 10 499.3zM930.3 441H351.5c-31.9 0-59.7 26.4-59.7 59.7 0 33.3 26.4 59.7 59.7 59.7h578.8c31.9 0 59.7-26.4 59.7-59.7 0-33.3-27.8-59.7-59.7-59.7zM10 788c0 36.8 29.8 66.6 66.6 66.6s66.6-29.8 66.6-66.6-29.8-66.6-66.6-66.6S10 751.2 10 788zm920.3-59.7H351.5c-31.9 0-59.7 26.4-59.7 59.7s26.4 59.7 59.7 59.7h578.8c31.9 0 59.7-26.4 59.7-59.7s-27.8-59.7-59.7-59.7z"/></svg>
           </button>
           <div x-show="dropdownOpen" @click="dropdownOpen = false" class="fixed inset-0 h-full w-full z-10"></div>
 
@@ -46,7 +46,6 @@
             </form>
           </div>
         </div>
-      </div>
       {% else %}
       <a href="/sessions/new" class="ml-3 button button-sm">
         {{ 'app.login' | t }}
