Orders: line items
Fix calculating price and total price for line item

Orders: update line item quantity

Add rest api for line_items

Add readme

Remove items from order

Order: update item quantity

Order: recalculate

Order: clean existing order before test

Order: fix adding item and recalculatin the price

Order: fix stripe payments

Order: after adding product to cart we show order

--- a/app/views/partials/lib/can_edit.liquid
+++ b/app/views/partials/lib/can_edit.liquid
@@ -3,7 +3,7 @@
     include 'redirect_to', url: '/', error: 'app.errors.denied'
   endunless
 
-  if item.orders.size > 0
+  if item.line_items.size > 0
     function url = 'link_to', path: '/items/', item: item
     include 'redirect_to', url: url, error: 'app.errors.cannot_edit_coz_has_active_orders'
   endif
