--- a/app/views/partials/lib/consumers/status_created/update_metrics_cache.liquid
+++ b/app/views/partials/lib/consumers/status_created/update_metrics_cache.liquid
@@ -10,4 +10,13 @@
     function object = 'lib/commands/execute', mutation_name: 'items/update' object: object, selection: 'model_update'
     log object
   endif
+
+  if status.scope == 'app.statuses.orders'
+    assign object = '{}' | parse_json
+    hash_assign object['id'] = event.target.id
+    hash_assign object['c__status'] = status.fullname
+
+    function object = 'lib/commands/execute', mutation_name: 'orders/update' object: object, selection: 'model_update'
+    log object
+  endif
 %}
