--- a/app/views/partials/lib/commands/orders/create/build.liquid
+++ b/app/views/partials/lib/commands/orders/create/build.liquid
@@ -3,14 +3,10 @@
           @current_user_id
 {% endcomment %}
 
-{% assign total = item.price | default: 0 %}
-
 {% parse_json object %}
 {
-  "item_id": "{% print item.id %}",
   "buyer":   "{% print current_user_id %}",
-  "seller":  "{% print item.owner.id %}",
-  "total":    {% echo total %}
+  "seller":  "{% print item.owner.id %}"
 }
 {% endparse_json %}
 
