--- a/app/views/partials/theme/simple/orders/review.liquid
+++ b/app/views/partials/theme/simple/orders/review.liquid
@@ -1,7 +1,3 @@
-<h3 class="mb-4 text-xl font-semibold">
-  {{ 'app.orders.review.confirm' | t }}
-</h3>
-
 <form action="/orders/pay" id="pay-form" method="post" class="w-1/2"
   data-checkout-session-id="{{ checkout_session.id }}"
   data-stripe-pk-key="{{ context.constants.stripe_pk_key }}"
@@ -9,13 +5,8 @@
   {% include 'authenticity_token' %}
   <input type="hidden" name="status" value="app.statuses.orders.paid"/>
   <input type="hidden" name="order_id" value="{{ order.id }}"/>
-
-  <p>
-    {{ 'app.orders.review.order_total' | t }} {{ order.total | pricify_cents }}<br>
-  </p>
-
   <button class="button">
-    {{ 'app.pay' | t }}
+    {{ 'app.orders.checkout.pay-online' | t }}
   </button>
 </form>
 </div>
