--- a/app/views/partials/theme/simple/orders/success.liquid
+++ b/app/views/partials/theme/simple/orders/success.liquid
@@ -1,6 +1,6 @@
 <div class="p-4 mb-4 bg-gray-200 border rounded" data-test="information">
   <p>
-    {{ 'app.orders.review.success' | t }}
+    {{ 'app.orders.checkout.success' | t }}
   </p>
 </div>
 
