Hide chat by defauld behing a feature flag

--- a/app/views/partials/theme/simple/profile/show.liquid
+++ b/app/views/partials/theme/simple/profile/show.liquid
@@ -31,7 +31,7 @@
 
   {% liquid
 
-    if current_profile.id != user.id
+    if current_profile.id != user.id and chat_enabled != blank
       render "modules/chat/chat", current_profile: current_profile, user: user, messages: messages, conversation: conversation
     endif
   %}
