--- a/modules/chat/public/views/pages/inbox.html.liquid
+++ b/modules/chat/public/views/pages/inbox.html.liquid
@@ -5,13 +5,30 @@ slug: inbox
 {% liquid
   include 'lib/must_be_authenticated'
   function current_user = 'lib/data/queries/profiles/find', user_id: context.current_user.id
-  graphql conversations = 'modules/chat/inbox', user_id: current_user.id
-  assign current_conversation = conversations.models.results | where: "id", params["active_conversation"] | first | default: conversations.models.results.first
-  graphql messages = 'modules/chat/find_messages', conversation_id: current_conversation.id
 
-  render "modules/chat/inbox/header", user: current_user
 
-  if current_conversation != blank
-    render "modules/chat/inbox/conversations", current_conversation: current_conversation, conversations: conversations, current_user: current_user, messages: messages
+  if context.constants.USE_WEBSOCKET_CHAT != blank
+
+  comment
+    to enable chat execute:
+
+    mutation EnableChat {
+    constant_set(name: "USE_WEBSOCKET_CHAT", value: "true") {
+      name
+      value
+      }
+    }
+    endcomment
+
+    graphql conversations = 'modules/chat/inbox', user_id: current_user.id
+    assign current_conversation = conversations.models.results | where: "id", params["active_conversation"] | first | default: conversations.models.results.first
+    graphql messages = 'modules/chat/find_messages', conversation_id: current_conversation.id
+
+    render "modules/chat/inbox/header", user: current_user
+
+    if current_conversation != blank
+      render "modules/chat/inbox/conversations", current_conversation: current_conversation, conversations: conversations, current_user: current_user, messages: messages
+    endif
+
   endif
 %}
