Initial chat implementation (#43)
* WebSocket based chat protected by a feature flag

--- a/app/views/partials/theme/simple/profile/show.liquid
+++ b/app/views/partials/theme/simple/profile/show.liquid
@@ -28,5 +28,12 @@
       endif
     %}
   </div>
+
+  {% liquid
+
+    if current_profile.id != user.id and chat_enabled != blank
+      render "modules/chat/chat", current_profile: current_profile, user: user, messages: messages, conversation: conversation
+    endif
+  %}
 </div>
 
