Updated profile to include avatar information

--- a/app/views/partials/theme/simple/layout/header.liquid
+++ b/app/views/partials/theme/simple/layout/header.liquid
@@ -1,16 +1,3 @@
-{% liquid
-    if context.current_user.id
-        function current_profile = 'lib/current_profile', user_id: context.current_user.id	
-
-        if current_profile.avatar.photo.versions.tiny
-            assign avatar = current_profile.avatar.photo.versions.tiny
-        else
-            assign avatar = 'images/user.svg' | asset_url
-        endif
-    endif
-%}
-
-
 <header class="py-4">
     <div class="container flex flex-col flex-wrap items-center mx-auto md:flex-row">
 
@@ -39,8 +26,8 @@
                 <div x-data="{ dropdownOpen: false }" class="relative">
                     <button @click="dropdownOpen = !dropdownOpen" class="flex items-center relative z-10 px-3 py-2 bg-white rounded-md focus:outline-none" data-menu-dropdown>
                         <span class="hover:text-gray-900">{{ profile.first_name | default: profile.name }}</span>
-                        <img src="{{ avatar }}" class="w-5 h-5 rounded-full ml-2">
-                    </button>
+                        <img src="{{ profile.avatar.versions.tiny }}" class="w-5 h-5 rounded-full ml-2">
+					</button>
 
                     <div x-show="dropdownOpen" @click="dropdownOpen = false" class="fixed inset-0 z-10 w-full h-full"></div>
 
