--- a/app/views/partials/theme/simple/layout/scripts.liquid
+++ b/app/views/partials/theme/simple/layout/scripts.liquid
@@ -3,7 +3,7 @@
 <script src="{{ 'js/app.js' | asset_url }}"></script>
 
 
-<script src="{{ 'modules/chat/js/notifications.js' | asset_url }}"></script>
+<!-- <script src="{{ 'modules/chat/js/notifications.js' | asset_url }}"></script> -->
 <script src="{{ 'modules/chat/js/chat.js' | asset_url }}"></script>
 
 {% comment %}TODO: rewrite navigation dropdown in vanila js{% endcomment %}
