--- a/app/views/partials/theme/simple/privacy-policy.liquid
+++ b/app/views/partials/theme/simple/privacy-policy.liquid
@@ -1,4 +1,4 @@
-<main id="content" class="mx-auto px-6 xl:px-12 max-w-7xl pb-10 pt-px">
+<main class="mx-auto px-6 xl:px-12 max-w-7xl pb-10 pt-px">
   <div class="container w-full xl:w-4/5 mt-10 mb-32 text-lg">
     <h1 class="text-2xl font-bold text-center"> {{ 'app.privacy.privacy-policy' | t }} </h1>
     <p class="mt-8 text-center text-sm"> {{ 'app.privacy.last-updated' | t }} </p>
