ID removed from rest test-files

--- a/app/views/partials/theme/simple/profile/owner_actions.liquid
+++ b/app/views/partials/theme/simple/profile/owner_actions.liquid
@@ -1,7 +1,7 @@
 <section class="pt-4 mt-4 border-t">
 
   <header class="mb-2 md:flex md:justify-between">
-    <div class="text-2xl font-medium text-grey-darkest" id="user-name">
+    <div class="text-2xl font-medium text-grey-darkest" data-tc="user-name">
       {{ user.first_name }} {{ user.last_name }} <span class="font-normal">({{ user.name }})</span>
     </div>
 
