Added missing translation for missing profile

--- a/app/views/partials/theme/simple/admin/users/index.liquid
+++ b/app/views/partials/theme/simple/admin/users/index.liquid
@@ -29,7 +29,7 @@
 					</a>
 				</div>
 			{% else %}
-				missing profile
+				<em>{{ 'admin.menu.users.missing_profile' | t }}</em>
 			{% endif %}
 		</div>
 	</article>
