Basic responsiveness for admin/activities top filters

--- a/app/views/partials/theme/simple/categories/index.liquid
+++ b/app/views/partials/theme/simple/categories/index.liquid
@@ -2,7 +2,7 @@
 
 	<section>
 
-		<nav class="flex justify-end">
+		<nav class="flex justify-end mb-2">
 			<a href="/categories/new" class="button">
 				{{ 'app.models.categories.add' | t }}
 			</a>
