--- a/app/views/partials/theme/simple/admin/activities/index.liquid
+++ b/app/views/partials/theme/simple/admin/activities/index.liquid
@@ -1,28 +1,30 @@
 <div class="w-full p-3">
 
-  <form action="" class="flex justify-between w-full">
-    <div class="flex items-center p-2 flex-cols">
-      <span class="mr-2">{{ 'admin.menu.activities.list.public' | t }}</span>
-      <input name="public" type="checkbox" {% if context.params.public %}checked{% endif %}/>
-    </div>
-    <select name="feed" class="w-5/6 text-xl form-input">
-      <option value="">{{ 'admin.menu.activities.list.audit' | t }}</option>
-      <option value="system.1" {% if params.feed == "system.1" %}selected{% endif %}>{{ 'admin.menu.activities.list.all' | t }}</option>
-      <option value="system.2" {% if params.feed == "system.2" %}selected{% endif %}>{{ 'admin.menu.activities.list.comments' | t }}</option>
+	<form action="" class="md:flex flex-col md:flex-row w-full gap-2 p-2 bg-gray-200 rounded">
 
-      {% for user in users.results %}
-        {% assign feed = "user." | append: user.id %}
-        <option value="{{feed}}" {% if params.feed == feed %}selected{% endif %}>{{ 'admin.menu.activities.list.user' | t }} {{ user.name }} ({{ 'admin.menu.activities.list.user_id' | t }}{{ user.id }})</option>
-      {% endfor %}
+		<div class="flex items-center p-2">
+			<span class="capitalize mr-2">{{ 'admin.menu.activities.list.public' | t }}</span>
+			<input name="public" type="checkbox" {% if context.params.public %}checked{% endif %}>
+		</div>
 
-      {% for group in groups.results %}
-        {% assign feed = "group." | append: group.id %}
-        <option value="{{ feed }}" {% if params.feed == feed %}selected{% endif %}>{{ 'admin.menu.activities.list.group' | t }} {{ group.name }} ({{ 'admin.menu.activities.list.group_id' | t }}{{ group.id }})</option>
-      {% endfor %}
+		<select name="feed" class="md:w-5/6 form-select">
+			<option value="">{{ 'admin.menu.activities.list.audit' | t }}</option>
+			<option value="system.1" {% if params.feed == "system.1" %}selected{% endif %}>{{ 'admin.menu.activities.list.all' | t }}</option>
+			<option value="system.2" {% if params.feed == "system.2" %}selected{% endif %}>{{ 'admin.menu.activities.list.comments' | t }}</option>
 
-    </select>
-    <input type="submit" class="w-1/6 form-input" value="GO">
-  </form>
+			{% for user in users.results %}
+				{% assign feed = "user." | append: user.id %}
+				<option value="{{feed}}" {% if params.feed == feed %}selected{% endif %}>{{ 'admin.menu.activities.list.user' | t }} {{ user.name }} ({{ 'admin.menu.activities.list.user_id' | t }}{{ user.id }})</option>
+			{% endfor %}
+
+			{% for group in groups.results %}
+				{% assign feed = "group." | append: group.id %}
+				<option value="{{ feed }}" {% if params.feed == feed %}selected{% endif %}>{{ 'admin.menu.activities.list.group' | t }} {{ group.name }} ({{ 'admin.menu.activities.list.group_id' | t }}{{ group.id }})</option>
+			{% endfor %}
+		</select>
+
+		<input type="submit" class="button ml-auto" value="{{ 'admin.menu.activities.list.apply' | t }}">
+	</form>
 
   <span class="ml-2 text-xs">
     {{ 'admin.menu.activities.following' | t }} {{ selected.followed_users | map: 'email' | join: ', ' }}
