Orders: do not show stripe payments if it is not configured

--- a/app/views/pages/dashboard/buy/orders/checkout.liquid
+++ b/app/views/pages/dashboard/buy/orders/checkout.liquid
@@ -9,7 +9,7 @@ metadata:
   function current_profile = 'lib/current_profile', user_id: context.current_user.id, required: true
 
   function order = 'lib/data/queries/orders/find', buyer: current_profile.id, id: context.params.slugs withStatuses: true
-  function checkout_session = 'lib/commands/orders/checkout_session/create', order: order, mpo_fee_percent: context.constants.mpo_fee_percent
+  function checkout_session = 'lib/commands/orders/checkout_session/create', order: order, constants: context.constants
 
   include 'theme/simple/dashboard/breadcrumbs'
   include 'theme/simple/dashboard/orders/checkout', order: order, checkout_session: checkout_session
