Added message button and inbox now automatically creates new conversations

--- a/app/views/partials/theme/simple/profile/show.liquid
+++ b/app/views/partials/theme/simple/profile/show.liquid
@@ -8,7 +8,13 @@
       elsif current_profile != blank
         render 'theme/simple/follow_button', current_profile: current_profile, user: user, big: true
       endif
-    %}
+	%}
+	
+	{% liquid
+		if current_profile.id != user.id and chat_enabled != blank
+			render "modules/chat/message_button", current_profile: current_profile, user: user, conversation: conversation
+		endif	
+	%}
   </div>
 
   <div class="w-full md:flex-1">
